--- a/app/src/main/res/layout/mydecodeactivity.xml
+++ b/app/src/main/res/layout/mydecodeactivity.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/float_id"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:id="@+id/float_id"
+    android:background="@drawable/gradient"
+    android:orientation="horizontal">
 
-  >
     <com.honeywell.barcode.HSMDecodeComponent
         android:id="@+id/hsm_decodeComponent"
-        android:layout_width="180dp"
-        android:layout_height="320dp"
-        android:visibility="invisible"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
         android:layout_margin="5dp" />
 
     <EditText
@@ -21,9 +20,9 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:ems="10"
-        android:visibility="gone"
         android:gravity="top"
-        android:inputType="textMultiLine" >
+        android:inputType="textMultiLine"
+        android:visibility="gone">
 
         <requestFocus />
     </EditText>
